# claude-relay

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ops/promtail/: local-promtail.yml
scripts/: run-promtail-shipper.sh  run-relay-with-logfile.sh
src/claude_relay/: __init__.py  __main__.py  server.py  service.py
tests/: test_server.py
