[project]
name = "claude-relay"
version = "0.3.0"
description = "OpenAI- and Anthropic-compatible API server that routes through Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.scripts]
claude-relay = "claude_relay.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_relay"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8",
    "anyio>=4",
    "httpx>=0.27",
]
